...
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_register">Register User</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_message">Hello, %1$s!</string>
    <string name="emailInput">Email</string>
    <string name="passwordInput">Password</string>
    <string name="loginText">Login</string>
    <string name="forgot_password_string">Reset password</string>
    <string name="terms_and_cond_string">Terms and Conditions</string>
    <string name="register_string">create an account</string>
    <string name="greeting_text">Welcome to DailyShiba</string>
    <!-- TODO: Remove or change this placeholder text -->
...
