<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usermanagement.ui.register.RegisterFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/register_page_loading_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_anim" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_page_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_page_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_page_accountdetails_seperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_page_thirdparty_seperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />

    <TextView
        android:id="@+id/register_greeting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_register"
        android:textAppearance="@style/TitleText"
        android:textSize="@dimen/big_title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/register_page_thirdparty_seperator"
        app:layout_constraintEnd_toStartOf="@+id/register_page_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/register_page_guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_page_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/register_page_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/register_page_guideline_left"
        app:layout_constraintTop_toTopOf="@+id/register_page_thirdparty_seperator">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_page_name_layout_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corner_rad_10"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_page_email_layout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/register_page_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/register_page_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/register_page_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_page_email_layout_input_text"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corner_rad_10"
            android:hint="@string/emailInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_page_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_corner_rad_10"
        app:layout_constraintEnd_toStartOf="@+id/register_page_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/register_page_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/register_page_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/register_page_password_layout_edit_text"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corner_rad_10"
            android:hint="@string/passwordInput" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioButton
        android:id="@+id/register_terms_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/terms_and_conditions_text"
        android:textAppearance="@style/SubtitleText"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/radio_button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/register_page_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/register_page_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/register_page_password_layout" />

    <Button
        android:id="@+id/register_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_complete_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/register_page_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/register_page_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/register_terms_radio_button" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97
" />


</androidx.constraintlayout.widget.ConstraintLayout>